# jetbrains-hackathon-sf-2026

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  lintropy.yaml  mkdocs.yml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yaml  pages.yaml
.lintropy/: no-dbg.rule.yaml  no-thread-sleep.rule.yaml  no-todo.rule.yaml  no-unwrap.rule.yaml
crates/lintropy-cli/: Cargo.toml
crates/lintropy-cli/src/: cli.rs  exit.rs  main.rs  skill.rs
crates/lintropy-cli/src/commands/: check.rs  explain.rs  hook.rs  init.rs  mod.rs  rules.rs  schema.rs  ts_parse.rs
crates/lintropy-cli/tests/: cli_init.rs  cli_rules_describe.rs  cli_schema.rs
crates/lintropy-cli/tests/common/: mod.rs
crates/lintropy-core/: Cargo.toml
crates/lintropy-core/src/: config.rs  engine.rs  error.rs  fix.rs  lib.rs  predicates.rs
crates/lintropy-core/tests/: engine_snapshots.rs
crates/lintropy-langs/: Cargo.toml
crates/lintropy-langs/src/: lib.rs
crates/lintropy-output/: Cargo.toml
crates/lintropy-output/src/: json.rs  lib.rs  text.rs
crates/lintropy-output/tests/: reporters.rs
crates/lintropy-rules/: Cargo.toml
crates/lintropy-rules/src/: lib.rs
docs/: 404.html  cli.md  configuration.md  editor-and-agent-setup.md  getting-started.md  index.html  index.md  overview.md  rule-language.md  styles.css  troubleshooting.md
docs/integrations/: claude-code.md  codex.md  index.md  jetbrains.md  other-agents.md  vscode.md
docs/stylesheets/: extra.css
editors/claude-code/: README.md
editors/claude-code/.claude-plugin/: plugin.json
editors/codex/: README.md
editors/codex/.codex-plugin/: plugin.json
editors/jetbrains/: README.md
editors/jetbrains/lsp4ij-template/: template.json
editors/jetbrains/lsp4ij-template-dev/: clientSettings.json  template.json
editors/schemas/: lintropy-rule.schema.json  lintropy-rules.schema.json  lintropy.schema.json
editors/vscode/lintropy/: README.md
examples/rust-demo/.lintropy/: no-user-new.rule.yaml
examples/rust-demo/samples/dynamic/: live_reload_probe.rs
overrides/: main.html
scripts/: install-query-extension.sh
specs/: 2026-04-18-multilang-support.md  2026-04-18-rule-descriptions-plan.md  2026-04-18-rule-descriptions.md
specs/merged/: 2026-04-18-lintropy-work-packages.md
src/: cli.rs  editor_assets.rs  langs.rs  lib.rs  main.rs  scratch_wildcard.rs  skill.rs
src/commands/: init.rs  install.rs  install_claude_code_plugin.rs  install_lsp_extension.rs  install_lsp_template.rs  mod.rs  ts_parse.rs
src/commands/install/: codex.rs  lsp_template.rs  mod.rs
src/core/: config.rs  discovery.rs  engine.rs
src/lsp/: actions.rs  completion.rs  document.rs  position.rs  server.rs
tests/: cli_init.rs  cli_install_editor_assets.rs  cli_ts_parse.rs  integration_check.rs  integration_fix.rs  integration_hook.rs  integration_init.rs  integration_lsp.rs  integration_multilang.rs
website/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
website/public/: CNAME
website/src/: App.tsx  docs.ts  main.tsx  nav.ts  styles.css
website/src/components/: CodeBlock.tsx  Header.tsx  SearchDialog.tsx  Sidebar.tsx  Toc.tsx
website/src/pages/: DocsPage.tsx  Home.tsx  NotFound.tsx
