[workspace]
resolver = "2"
members = [
    "crates/lintropy-core",
    "crates/lintropy-langs",
    "crates/lintropy-rules",
    "crates/lintropy-output",
    "crates/lintropy-cli",
]

# Workspace root is also a dummy package that owns the cross-crate
# end-to-end integration tests under `tests/` (WP9). It publishes nothing
# and has no library or binary of its own.
[package]
name = "lintropy-e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
autobins = false
autobenches = false
autoexamples = false
autotests = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/anthropics/lintropy"
authors = ["lintropy contributors"]
readme = "README.md"
keywords = ["linter", "tree-sitter", "static-analysis", "yaml", "agent"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
thiserror = "2"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
ignore = "0.4"
globset = "0.4"
similar = "2"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
predicates = "3"
