[package]
name = "lintropy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lintropy: structural linter driven by tree-sitter queries and repo-local YAML rules."

[[bin]]
name = "lintropy"
path = "src/main.rs"

[dependencies]
lintropy-core = { path = "../lintropy-core", version = "0.1.0" }
lintropy-langs = { path = "../lintropy-langs", version = "0.1.0" }
lintropy-output = { path = "../lintropy-output", version = "0.1.0" }
lintropy-rules = { path = "../lintropy-rules", version = "0.1.0" }
clap = { workspace = true }
ignore = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
