[package]
name = "lintropy-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reporter trait and text + JSON reporters for lintropy."

[dependencies]
lintropy-core = { path = "../lintropy-core", version = "0.1.0" }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
