[package]
name = "lintropy-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rule DSL (placeholder — implemented by WP1)."

[dependencies]
lintropy-core = { path = "../lintropy-core" }
